# comic-storyboard-b2

./: .env.example  .gitignore  AGENTS.md  README.md
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: claude-review.yml
apps/web/: .env.example  next.config.ts  package-lock.json  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: panel-card.tsx  story-form.tsx  storyboard-grid.tsx
apps/web/src/components/ui/: error-state.tsx
apps/web/src/lib/: api.ts
docs/: ARCHITECTURE.md  app-workflows.md
docs/exec-plans/completed/: initial-scaffold.md
docs/features/: character-consistency.md  panel-fanout.md  story-breaker.md  strip-export.md
services/api/: pyproject.toml  requirements.txt
services/api/app/: config.py  main.py  schemas.py  story_breaker.py  strip.py
services/api/app/repo/: __init__.py  pipelines.py  storage.py
services/api/tests/: test_issue_template.py  test_structure.py
